tests/ui/attribute/empty_function_body.stderr
error: custom attribute panicked
 --> tests/ui/attribute/empty_function_body.rs:3:1
  |
3 | #[vibecode]
  | ^^^^^^^^^^^
  |
  = help: message: The function body must be empty
